add page content

--- a/guide_map/footer.html
+++ b/guide_map/footer.html
@@ -1,8 +1,7 @@
 <footer id="footer">
 	<div class="inner">
 		<h2>成功社區發展協會</h2>
-		<p>看這邊有沒有要什麼介紹，不然就整塊拿掉了。下面的區塊目前只有Email，其他可放例如IG, Facebook</p>
-
+		<p>電話：(04)-23378469  　　 地址：414 台中市烏日區學田路便行巷270號之12號</p>
 		<ul class="icons">
 <!--		<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 			<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
