--- a/guide_map/page5.html
+++ b/guide_map/page5.html
@@ -48,10 +48,10 @@
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<!--<script src="assets/js/jquery.poptrox.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="assets/js/main.js"></script>-->
 			<script type='text/javascript'>
 				$(document).ready(function(){
 					<!--head map-->
