--- a/guide_map/index.html
+++ b/guide_map/index.html
@@ -25,12 +25,22 @@
 				<!-- Boxes -->
 					<div class="thumbnails">
 
+					
+						<div class="box">
+							<a href="page9.html#main" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
+							<div class="inner">
+								<h3>成功嶺</h3>
+								<p>日治時期，成功嶺是訓練日本兵騎馬的軍事基地。戰後初期，中華民國政府接收為成功基地，之後成為「成功嶺訓練中心」，是陸軍入伍新訓與大專集訓的地方；為台灣1980年代以前出生的男大學生共同回憶，半個世紀以來，曾有130多萬名大專生在此接受軍事洗禮。</p>
+								<a href="page9.html#main" class="button fit">More</a>
+							</div>
+						</div>
+						
 						<div class="box">
 							<a href="page1.html#main" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
 							<div class="inner">
 								<h3>建興宮</h3>
 								<p>建興宮已有兩百六十九年歷史，興建於道光十六年，緣起於福建省漳浦縣梅林社人士陳正力先生，隨深恭請開漳聖王一尊來台，經多年來歷次整修為二樓廟宇，一樓主要供奉開漳聖王，二樓雷音寺供奉觀音佛祖。每年農曆二月十五日舉辦遶境三和里及學田里，保佑里民平安，是里內一大盛事</p>
-								<a href="page1.html#main" class="button fit" data-poptrox="youtube,800x400">More</a>
+								<a href="page1.html#main" class="button fit">More</a>
 							</div>
 						</div>
 
@@ -38,8 +48,8 @@
 							<a href="page2.html#main" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 							<div class="inner">
 								<h3>成功社區活動中心</h3>
-								<p>成功社區休閒中心，為社區年長智者聚集談天的重要節點。</p>
-								<a href="page2.html#main" class="button fit" data-poptrox="youtube,800x400">More</a>
+								<p>活動中心門前花台是社區長輩聚集談天地方，三樓建築示各班隊聚會活動主要場地，籃球場更是打球運動休憩場所，是社區居民凝聚重要的節點位置。107年社區營造融入眷村地方特色，於入口處矮圍牆融入成功嶺500障礙圖像磚雕及入伍當兵到退役馬賽克拼貼圖像，保留居民回憶。</p>
+								<a href="page2.html#main" class="button fit">More</a>
 							</div>
 						</div>
 
@@ -48,7 +58,7 @@
 							<div class="inner">
 								<h3>九樓</h3>
 								<p>社區許多榮民居住在半山腰，是社區最高區域，建物接連而蓋，在彎曲小巷道上行走，猶如走在迷宮裡，走到最頂端是一片綠油油稻田，田旁有棵百年朴樹，遠望可眺望南屯區及高鐵站。</p>
-								<a href="page3.html#main" class="button fit" data-poptrox="youtube,800x400">More</a>
+								<a href="page3.html#main" class="button style2 fit">More</a>
 							</div>
 						</div>
 
@@ -56,8 +66,8 @@
 							<a href="page4.html#main" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
 							<div class="inner">
 								<h3>張日興冰店</h3>
-								<p>柑仔店老店</p>
-								<a href="page4.html#main" class="button style2 fit" data-poptrox="youtube,800x400">More</a>
+								<p>鄉下典型雜貨店，也是有營利事業登記證雜貨商店，成功嶺大專兵軍訓全盛時期生意興隆，也是社區居民用餐休憩聊天地方。</p>
+								<a href="page4.html#main" class="button style2 fit">More</a>
 							</div>
 						</div>
 
@@ -66,38 +76,38 @@
 							<div class="inner">
 								<h3>下馬厝福德祠</h3>
 								<p>居民陳進盛先生捐地10坪建土地公廟，經93年10月3日於社區發展協會理監事聯席會通過籌組籌備委員會，並於93年12月2日開工動土，歷經年施工期，於94年竣工，因地處下馬厝遺址範圍，故取名為「下馬厝福德祠」。</p>
-								<a href="page5.html#main" class="button style2 fit" data-poptrox="youtube,800x400">More</a>
+								<a href="page5.html#main" class="button style2 fit">More</a>
 							</div>
 						</div>
 
 						<div class="box">
 							<a href="page6.html#main" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 							<div class="inner">
-								<h3>成功公園與老樹碉堡</h3>
-								<p>成功公園是早期社區民意代表林光輝代表籌措經費興建的社區公園，縣市合併前隸屬國有財產局管轄土地，合併後改劃分農業局為土地管轄單位。碉堡位於成功社區公園上方的滄桑榕樹下，是早期的軍用崗哨。</p>
-								<a href="page6.html#main" class="button style2 fit" data-poptrox="youtube,800x400">More</a>
+								<h3>成功公園/老樹碉堡</h3>
+								<p>公園是早期社區民意代表籌措經費興建休憩場所，厚礙於維護經費短促而荒蕪，108年經社區營造而煥然一新。老樹碉堡位於公園高處，林蔭茂密為居民休閒遊憩、及自然資源解說的地方，因鄰近軍事地區，因此可將『後花園』主題融入『成功嶺』意象，做結合。</p>
+								<a href="page6.html#main" class="button style3 fit">More</a>
 							</div>
 						</div>			
 
 						<div class="box">
 							<a href="page7.html#main" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
 							<div class="inner">
-								<h3>榕樹三兄弟與士官長座椅</h3>
+								<h3>榕樹三兄弟/士官長座椅</h3>
 								<p> 成功社區鄰近軍事訓練基地成功嶺，因地形關係有別於一般平面式眷村，是階梯式建築生態眷村，早睡早起作息，結伴步行到800公尺遠旭光國小運動，往返路程對高齡年長者是項負擔，中途休息站乃因應而生，親水公園上方三棵老榕樹下最受青睞，以士官長官階造型座椅勾起當年軍人回憶
 								</p>
-								<a href="page8.html#main" class="button style3 fit" data-poptrox="youtube,800x400">More</a>
+								<a href="page8.html#main" class="button style3 fit">More</a>
 							</div>
 						</div>
-
+					<!--
 						<div class="box">
 							<a href="page18.html#main" class="image fit"><img src="images/pic09.jpg" alt="" /></a>
 							<div class="inner">
 								<h3>高腳樓菜圃</h3>
 								<p>成功社區鄰近軍事訓練基地成功嶺，早期榮民生活困頓只能藉由山坡地形開墾建屋，是租地自建階梯式生態眷村。每天除早睡早起運動退休規律生活，闢地種菜亦成習慣，只要有空地即可栽種蔬菜，居屋前、道路旁、圳旁斜坡地…</p>
-								<a href="page10.html#main" class="button fit" data-poptrox="youtube,800x400">More</a>
+								<a href="page10.html#main" class="button fit">More</a>
 							</div>
 						</div>
-
+					-->
 					</div>
 
 				</div>
@@ -111,11 +121,10 @@
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
+		<!-- 	<script src="assets/js/jquery.poptrox.min.js"></script> -->
 			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
+		<!--	<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script> -->
 			<script type='text/javascript'>
 
 	$(document).ready(function(){
